--- a/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -6,7 +6,9 @@
 
 .container {
   width: var(--default-layout-width);
+  max-width: 100%;
   display: flex;
+  margin-top: var(--default-layout-header-height);
 }
 
 .content {
