--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -10,6 +10,10 @@
   padding-bottom: 8px;
 }
 
+.menu-body {
+  overflow-y: auto;
+}
+
 .menu-items {
   width: 100%;
   justify-content: flex-start;
@@ -24,6 +28,8 @@
 .header {
   position: relative;
   height: 50px;
+  margin-top: -8px;
+  flex-shrink: 0;
 }
 
 .back-btn {
